[IHR2-6652] support openapi paging (#447)
* add nodes to graphql query for paged collections

* apply paging conditionaly

* fix tests

* add paging to response mapping

* add documentation

* refactor

* process review comments
